Handle unserializable data that causes exception.